major work layout
side bar
waterfall image layout
image description

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jessy.Z Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -13,14 +14,14 @@
             <nav>
                 <ul class="menu">
                     <li class="menu-item">
-                        <a href="#" aria-haspopup="true">Work Gallery</a>
+                        <a href="#" aria-haspopup="true">WORK GALLERY</a>
                         <ul class="submenu">
                             <li><a href="#">Major Work</a></li>
                             <li><a href="#">Featured Work</a></li>
                         </ul>
                     </li>
                     <li class="menu-item">
-                        <a href="#" aria-haspopup="true">Loving Thing</a>
+                        <a href="#" aria-haspopup="true">LOVING THING</a>
                         <ul class="submenu">
                             <li><a href="#">Photography</a></li>
                             <li><a href="#">Design</a></li>
@@ -29,14 +30,14 @@
                     <li class="menu-item">
                         <a href="#" aria-haspopup="true">About Me</a>
                         <ul class="submenu">
-                            <li><a href="#">Profile</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="#">Biography</a></li>
+                            <li><a href="#">Resume</a></li>
                         </ul>
                     </li>
                 </ul>
             </nav>
             <footer class="footer">
-                <p>&copy; 2024 Jessy Zhang. Handcrafted with ❤.</p>
+                <p>&copy; 2024 Jessy Zhang.<br>Handcrafted with ❤.</p>
             </footer>
         </div>
     <div class="main-content">
@@ -48,43 +49,49 @@
                     <figure>
                         <img src="tbn_major work/tbn_ss.png" alt="seagull studio">
                     </figure>
-                    <p class="description">Seagull Studio</p>
+                    <p class="description">Mobile Application Design<br>Branding<br>Product Photography</p>
                 </div>
                 <div class="waterfall-item">
                     <figure>
                         <img src="tbn_major work/tbn_uhn.png" alt="uhn">
                     </figure>
-                    <p class="description">UHN</p>
+                    <p class="description">Responsible Web Design<br>Visual Design</p>
+                <div class="waterfall-item">
+                        <figure>
+                            <img src="tbn_major work/tbn_wv.png" alt="wv">
+                        </figure>
+                        <p class="description">AR & Voice Interface Design<br>Accessible Design</p>
+                    </div>
                 </div>
                 <div class="waterfall-item">
                     <figure>
                         <img src="tbn_major work/tbn_mcd.png" alt="mcd">
                     </figure>
-                    <p class="description">McDonald's</p>
+                    <p class="description">Web Graphic Design</p>
                 </div>
                 <div class="waterfall-item">
                     <figure>
                         <img src="tbn_major work/tbn_ms.png" alt="more studio">
                     </figure>
-                    <p class="description">More Studio</p>
+                    <p class="description">Responsible Web Design<br>Visual Design</p>
                 </div>
                 <div class="waterfall-item">
                     <figure>
                         <img src="tbn_major work/tbn_kc.png" alt="kin care">
                     </figure>
-                    <p class="description">Kin Care</p>
+                    <p class="description">Mobile Application Design<br>Accessible Design<br>Health Monitor Design </p>
                 </div>
                 <div class="waterfall-item">
                     <figure>
                         <img src="tbn_major work/tbn_tt.png" alt="table tennis">
                     </figure>
-                    <p class="description">Table Tennis</p>
+                    <p class="description">System Information Design<br>Web & Mobile System Interface</p>
                 </div>
                 <div class="waterfall-item">
                     <figure>
                         <img src="tbn_major work/tbn_l.png" alt="lotes">
                     </figure>
-                    <p class="description">Lotes</p>
+                    <p class="description">AR Entertainment<br>AR Mobile Application Design</p>
                 </div>
             </main>
         </div>
