gallery image hover over effects
add hovering over effect: showing work title and zoom-in

--- a/index.html
+++ b/index.html
@@ -48,48 +48,56 @@
                 <div class="waterfall-item">
                     <figure>
                         <img src="tbn_major work/tbn_ss.png" alt="seagull studio">
+                        <figcaption class="work-title">Seagull Studio</figcaption>
                     </figure>
                     <p class="description">Mobile Application Design<br>Branding<br>Product Photography</p>
                 </div>
                 <div class="waterfall-item">
                     <figure>
                         <img src="tbn_major work/tbn_uhn.png" alt="uhn">
+                        <figcaption class="work-title">UHN Project</figcaption>
                     </figure>
                     <p class="description">Responsible Web Design<br>Visual Design</p>
+                </div>
                 <div class="waterfall-item">
-                        <figure>
-                            <img src="tbn_major work/tbn_wv.png" alt="wv">
-                        </figure>
-                        <p class="description">AR & Voice Interface Design<br>Accessible Design</p>
-                    </div>
+                    <figure>
+                        <img src="tbn_major work/tbn_wv.png" alt="wv">
+                        <figcaption class="work-title">WV Project</figcaption>
+                    </figure>
+                    <p class="description">AR & Voice Interface Design<br>Accessible Design</p>
                 </div>
                 <div class="waterfall-item">
                     <figure>
                         <img src="tbn_major work/tbn_mcd.png" alt="mcd">
+                        <figcaption class="work-title">MCD Project</figcaption>
                     </figure>
                     <p class="description">Web Graphic Design</p>
                 </div>
                 <div class="waterfall-item">
                     <figure>
                         <img src="tbn_major work/tbn_ms.png" alt="more studio">
+                        <figcaption class="work-title">More Studio</figcaption>
                     </figure>
                     <p class="description">Responsible Web Design<br>Visual Design</p>
                 </div>
                 <div class="waterfall-item">
                     <figure>
                         <img src="tbn_major work/tbn_kc.png" alt="kin care">
+                        <figcaption class="work-title">Kin Care</figcaption>
                     </figure>
                     <p class="description">Mobile Application Design<br>Accessible Design<br>Health Monitor Design </p>
                 </div>
                 <div class="waterfall-item">
                     <figure>
                         <img src="tbn_major work/tbn_tt.png" alt="table tennis">
+                        <figcaption class="work-title">Table Tennis</figcaption>
                     </figure>
                     <p class="description">System Information Design<br>Web & Mobile System Interface</p>
                 </div>
                 <div class="waterfall-item">
                     <figure>
                         <img src="tbn_major work/tbn_l.png" alt="lotes">
+                        <figcaption class="work-title">Lotes</figcaption>
                     </figure>
                     <p class="description">AR Entertainment<br>AR Mobile Application Design</p>
                 </div>
