photography work pop-up pages
change layout
change image display into slides

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="h1">
                 <h1>Major Work</h1>
             </div>
-            <main class="waterfall-gallery main-gallery">
+            <main class="waterfall-gallery">
                 <div class="waterfall-item" data-project="seagull-studio">
                     <a href="#" class="project-link">
                         <figure>
