--- a/featured work.html
+++ b/featured work.html
@@ -43,7 +43,7 @@
         </div>
     <div class="main-content">
             <div class="h1">
-                <h1>Featured Work</h1>
+                <h1>Maker Project</h1>
             </div>
             <main class="waterfall-gallery">
                 <div class="waterfall-item" data-project="shoulder-feeling">
