--- a/featured work.html
+++ b/featured work.html
@@ -42,9 +42,9 @@
             </footer>
         </div>
     <div class="main-content">
-            <div class="h1">
-                <h1>Maker Project</h1>
-            </div>
+        <div class="h1">
+            <h1 style="color: #E6F0AB;">Featured Work</h1>
+        </div>
             <main class="waterfall-gallery">
                 <div class="waterfall-item" data-project="shoulder-feeling">
                     <a href="#" class="project-link">
