--- a/photography.html
+++ b/photography.html
@@ -103,20 +103,22 @@
                 <h2 id="popup-title"></h2>
                 <section>
                     <h3>ABSTRACT</h3>
-                    <p id="popup-intro"></p>
+                    <p id="popup-abstract"></p>
+                </section>
+                <section>
+                    <h3>TOOLKIT</h3>
+                    <ul id="popup-toolkit"></ul>
+                </section>
+                <section>
+                    <h3>ROLE</h3>
+                    <p id="popup-role"></p>
                 </section>
                 <section>
                     <h3>KEYWORDS</h3>
                     <ul id="popup-keywords"></ul>
                 </section>
             </div>
-            <div id="popup-slideshow">
-                <div id="slideshow-container">
-                    <!-- Slides will be dynamically added here -->
-                </div>
-                <button id="prev-slide" aria-label="Previous slide">&#10094;</button>
-                <button id="next-slide" aria-label="Next slide">&#10095;</button>
-            </div>
+            <div id="popup-images" class="waterfall-gallery"></div>
         </div>
     </div>
 </body>
