--- a/photo.html
+++ b/photo.html
@@ -14,31 +14,54 @@
             <h1 class="brand-name">JESSY.Z</h1>
             <nav>
                 <ul class="menu">
-                    <li class="menu-item">
+                    <li class="menu-item" >
                         <a href="#" aria-haspopup="true">WORK GALLERY</a>
                         <ul class="submenu">
-                            <li><a href="#">Major Work</a></li>
-                            <li><a href="#">Featured Work</a></li>
+                            <li><a href="/">Major Work</a></li>
+                            <li><a  href="/featured">Featured Work</a></li>
                         </ul>
                     </li>
-                    <li class="menu-item">
+                    <li class="menu-item active">
                         <a href="#" aria-haspopup="true">LOVING THING</a>
                         <ul class="submenu">
-                            <li><a href="#">Photography</a></li>
-                            <li><a href="#">Design</a></li>
+                            <li><a class="active" href="/photo.html">Photography</a></li>
+                            <li><a href="/maker">Maker Project</a></li>
                         </ul>
                     </li>
                     <li class="menu-item">
                         <a href="#" aria-haspopup="true">About Me</a>
                         <ul class="submenu">
-                            <li><a href="#">Biography</a></li>
+                            <li><a href="/bio">Biography</a></li>
                             <li><a href="#">Resume</a></li>
                         </ul>
                     </li>
                 </ul>
             </nav>
+
             <footer class="footer">
-                <p>&copy; 2024 Jessy Zhang.<br>Handcrafted with ❤.</p>
+                <ul class="social-icons">
+                    <li>
+                            <a href="https://www.linkedin.com/in/jessy-zhang-3948897b/" target="_blank" rel="noopener noreferrer">
+                                <img src="socialmedia1.png" alt="LinkedIn" class="social-icon">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://scholar.google.com/citations?user=J-7ZqgkAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">
+                                <img src="socialmedia2.png" alt="Google Scholar" class="social-icon">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.instagram.com/jessyzhang_art/" target="_blank" rel="noopener noreferrer">
+                                <img src="socialmedia3.png" alt="GitHub" class="social-icon">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" target="_blank" rel="noopener noreferrer">
+                                <img src="socialmedia4.png" alt="Instagram" class="social-icon">
+                            </a>
+                        </li>
+                    </ul>
+                    <p>&copy; 2024 Jessy Zhang.<br>Handcrafted with ❤.</p>
             </footer>
         </div>
     <div class="main-content">
