--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
                     <a href="#" class="project-link">
                         <figure>
                             <img src="tbn_major work/tbn_uhn.png" alt="uhn">
-                            <figcaption class="work-title">UHN Project</figcaption>
+                            <figcaption class="work-title">SGDc Inclusive Cancer Care</figcaption>
                         </figure>
-                        <p class="description">Responsible Web Design<br>Visual Design</p>
+                        <p class="description">Responsible Web Design<br>Visual Design<br>Inclusive Design</p>
                     </a>
                 </div>
                 <div class="waterfall-item" data-project="wv-project">
@@ -156,7 +156,7 @@
                 </section>
                 <section>
                     <h3>TOOLKIT</h3>
-                    <ul id="popup-toolkit"></ul>
+                    <ul id="popup-toolkit" style="list-style-type: none; padding-left: 0;"></ul>
                 </section>
                 <section>
                     <h3>ROLE</h3>
@@ -164,7 +164,7 @@
                 </section>
                 <section>
                     <h3>KEYWORDS</h3>
-                    <ul id="popup-keywords"></ul>
+                    <ul id="popup-keywords" style="list-style-type: none; padding-left: 0;"></ul>
                 </section>
             </div>
             <div id="popup-images" class="waterfall-gallery"></div>
