update bio.html UI
image and text layout changed

--- a/featured.html
+++ b/featured.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -24,8 +24,9 @@
                     <li class="menu-item">
                         <a href="#" aria-haspopup="true">LOVING THING</a>
                         <ul class="submenu">
-                            <li><a href="/photo.html">Photography</a></li>
                             <li><a href="/maker">Maker Project</a></li>
+                            <li><a href="/photo.html">Photography</a></li>
+                            
                         </ul>
                     </li>
                     <li class="menu-item">
@@ -41,23 +42,18 @@
             <footer class="footer">
                 <ul class="social-icons">
                     <li>
-                            <a href="https://www.linkedin.com/in/jessy-zhang-3948897b/" target="_blank" rel="noopener noreferrer">
-                                <img src="socialmedia1.png" alt="LinkedIn" class="social-icon">
+                        <a href="https://www.linkedin.com/in/jessy-zhang-3948897b/" target="_blank" rel="noopener noreferrer">
+                                <img src="linkedin.png" alt="LinkedIn" class="social-icon">
                             </a>
                         </li>
                         <li>
                             <a href="https://scholar.google.com/citations?user=J-7ZqgkAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">
-                                <img src="socialmedia2.png" alt="Google Scholar" class="social-icon">
+                                <img src="googlescholar.png" alt="Google Scholar" class="social-icon">
                             </a>
                         </li>
                         <li>
                             <a href="https://www.instagram.com/jessyzhang_art/" target="_blank" rel="noopener noreferrer">
-                                <img src="socialmedia3.png" alt="GitHub" class="social-icon">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="" target="_blank" rel="noopener noreferrer">
-                                <img src="socialmedia4.png" alt="Instagram" class="social-icon">
+                                <img src="github.png" alt="GitHub" class="social-icon">
                             </a>
                         </li>
                     </ul>
@@ -66,7 +62,7 @@
         </div>
     <div class="main-content">
         <div class="h1">
-            <h1 style="color: #E6F0AB;">Featured Work</h1>
+            <h1>Featured Work</h1>
         </div>
             <main class="waterfall-gallery">
                 <div class="waterfall-item" data-project="shoulder-feeling">
