--- a/maker.html
+++ b/maker.html
@@ -24,8 +24,8 @@
                     <li class="menu-item active">
                         <a href="#" aria-haspopup="true">LOVING THING</a>
                         <ul class="submenu">
-                            <li><a href="/photo.html">Photography</a></li>
                             <li><a class="active" href="/maker">Maker Project</a></li>
+                            <li><a href="/photo.html">Photography</a></li>
                         </ul>
                     </li>
                     <li class="menu-item">
@@ -41,23 +41,18 @@
             <footer class="footer">
                 <ul class="social-icons">
                     <li>
-                            <a href="https://www.linkedin.com/in/jessy-zhang-3948897b/" target="_blank" rel="noopener noreferrer">
-                                <img src="socialmedia1.png" alt="LinkedIn" class="social-icon">
+                        <a href="https://www.linkedin.com/in/jessy-zhang-3948897b/" target="_blank" rel="noopener noreferrer">
+                                <img src="linkedin.png" alt="LinkedIn" class="social-icon">
                             </a>
                         </li>
                         <li>
                             <a href="https://scholar.google.com/citations?user=J-7ZqgkAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">
-                                <img src="socialmedia2.png" alt="Google Scholar" class="social-icon">
+                                <img src="googlescholar.png" alt="Google Scholar" class="social-icon">
                             </a>
                         </li>
                         <li>
                             <a href="https://www.instagram.com/jessyzhang_art/" target="_blank" rel="noopener noreferrer">
-                                <img src="socialmedia3.png" alt="GitHub" class="social-icon">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="" target="_blank" rel="noopener noreferrer">
-                                <img src="socialmedia4.png" alt="Instagram" class="social-icon">
+                                <img src="github.png" alt="GitHub" class="social-icon">
                             </a>
                         </li>
                     </ul>
