--- a/index.html
+++ b/index.html
@@ -162,6 +162,11 @@
                 </section>
             </div>
             <div id="popup-images" class="waterfall-gallery"></div>
+            <button id="close-popup-top">
+                <span class="inner">
+                    <span class="label">Close</span>
+                </span>
+            </button>
         </div>
     </div>
 </body>
