update popup UI details

--- a/featured.html
+++ b/featured.html
@@ -52,7 +52,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.instagram.com/jessyzhang_art/" target="_blank" rel="noopener noreferrer">
+                            <a href="https://github.com/xinzhang-jessy" target="_blank" rel="noopener noreferrer">
                                 <img src="github.png" alt="GitHub" class="social-icon">
                             </a>
                         </li>
