--- a/maker.html
+++ b/maker.html
@@ -41,7 +41,7 @@
             <footer class="footer">
                 <ul class="social-icons">
                     <li>
-                        <a href="https://www.linkedin.com/in/jessy-zhang-3948897b/" target="_blank" rel="noopener noreferrer">
+                        <a href="https://github.com/xinzhang-jessy" target="_blank" rel="noopener noreferrer">
                                 <img src="linkedin.png" alt="LinkedIn" class="social-icon">
                             </a>
                         </li>
